# PyLazy

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyfuncai/: __init__.py  cache.py  cli.py  compiler.py  core.py  exceptions.py  prompts.py  providers.py  validation.py
tests/: test_ollama_live.py  test_pyfuncai.py
