[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "PyFuncAI"
version = "0.1.5"
description = "Prompt-defined Python functions with lazy or eager LLM-backed generation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "PyFuncAI Contributors" },
]
keywords = [
  "ai",
  "codegen",
  "gemini",
  "llm",
  "ollama",
  "openai",
  "python",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
pyfuncai = "pyfuncai.cli:main"

[project.urls]
Homepage = "https://github.com/AaronCreor/PyFuncAI"
Repository = "https://github.com/AaronCreor/PyFuncAI"
Issues = "https://github.com/AaronCreor/PyFuncAI/issues"
Changelog = "https://github.com/AaronCreor/PyFuncAI/releases"

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfuncai"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/example.py",
  "/.github/workflows",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyfuncai"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
